Fixing HTML Lint

--- a/src/pages/donate/donate.html
+++ b/src/pages/donate/donate.html
@@ -37,7 +37,7 @@
             <section id="donate">
                 <p class="portal">Eventually this will hopefully have a portal to make a credit card donation.
                     For now i'll just add a picture</p>
-                <img src="https://i.ibb.co/v3xDbvW/united-nations-covid-19-response-QVNy-Cll-G2-GQ-unsplash.jpg" alt="This photo says every little thing helps." height="400px">
+                <img src="https://i.ibb.co/v3xDbvW/united-nations-covid-19-response-QVNy-Cll-G2-GQ-unsplash.jpg" alt="This photo says every little thing helps.">
             </section>
             <section>
                 <h2 id="see-impact">See the Impact</h2>
@@ -46,7 +46,7 @@
                     <h3>Stories From The Kids</h3>
                     <div id="image-flex">
                         <button class="back arrow"></button>
-                        <img id="kids-img" class="card">
+                        <img src="https://i.ibb.co/1dkTL91/kid-2696865-1920.jpg" alt="A smiling kid" id="kids-img" class="card">
                         <button class="next arrow"></button>
                     </div>
                     <h4 class="kids-head"></h4>
@@ -82,14 +82,45 @@
             <section>
                 <div>
                 <h3>Social Media</h3>
-                    <table id="social">
-                        <td><a href="#"><img src="https://i.ibb.co/80hwJkK/iconfinder-Rounded-Facebook-svg-5282541.png" alt="Facebook Icon" border="0"></a></td>
-                        <td><a href="#"><img src="https://i.ibb.co/Npkt1kR/iconfinder-Rounded-Twitter5-svg-5282551.png" alt="Twitter Icon" border="0"></a></td>
-                        <td><a href="#"><img src="https://i.ibb.co/BCkpFF0/iconfinder-Rounded-Instagram-svg-5282544.png" alt="Twitter Icon" border="0"></a></td>
+                    <table>
+                        <td><a><img src="https://i.ibb.co/80hwJkK/iconfinder-Rounded-Facebook-svg-5282541.png" alt="Facebook Icon"></a></td>
+                        <td><a><img src="https://i.ibb.co/Npkt1kR/iconfinder-Rounded-Twitter5-svg-5282551.png" alt="Twitter Icon"></a></td>
+                        <td><a><img src="https://i.ibb.co/BCkpFF0/iconfinder-Rounded-Instagram-svg-5282544.png" alt="Twitter Icon"></a></td>
                     </table>
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <div class="oval"></div>
+            <div class="flex-container">
+                <div class="flex-item text-center">
+                    <h2 href="#">Give</h2>
+                    <a href="donate.html">Donate<a> | </a></a>
+                    <a href="../our-projects/our-projects.html">Our Projects<a> | </a></a>
+                    <a href="#see-impact">See The Impact</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2 href="#">Learn More</h2>
+                    <a href="../about-us/about-us.html#mission">Our Mission<a> | </a></a>
+                    <a href="../about-us/about-us.html#leadership">LeaderShip<a> | </a></a>
+                    <a href="../about-us/about-us.html#finance">Financials</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2>Follow Us</h2>
+                    <a href="#">Instagram<a> | </a></a>
+                    <a href="#">Facebook<a> | </a></a>
+                    <a href="#">Twitter</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2>Contact Us</h2>
+                    <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
+                    <a href="mailto:example@example.com">example@example.com</a>
+                </div>
+                <div class="flex-item text-center non-profit">
+                    <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
+                </div>
+            </div>
+        </footer>
         <!--Load Javascript-->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -97,35 +128,4 @@
         <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.js"></script>
         <script src="donate.js"></script>
     </body>
-    <footer  class="footer" style="background-color: #2c292f">
-        <div class="oval"></div>
-        <div class="flex-container">
-            <div class="flex-item text-center">
-                <h2 href="#">Give</h2>
-                <a href="donate.html">Donate<a> | </a></a>
-                <a href="../our-projects/our-projects.html">Our Projects<a> | </a></a>
-                <a href="#see-impact">See The Impact</a>
-            </div>
-            <div class="flex-item text-center">
-                <h2 href="#">Learn More</h2>
-                <a href="../about-us/about-us.html#mission">Our Mission<a> | </a></a>
-                <a href="../about-us/about-us.html#leadership">LeaderShip<a> | </a></a>
-                <a href="../about-us/about-us.html#finance">Financials</a>
-            </div>
-            <div class="flex-item text-center">
-                <h2>Follow Us</h2>
-                <a href="#">Instagram<a> | </a></a>
-                <a href="#">Facebook<a> | </a></a>
-                <a href="#">Twitter</a>
-            </div>
-            <div class="flex-item text-center">
-                <h2>Contact Us</h2>
-                <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
-                <a href="mailto:example@example.com">example@example.com</a>
-            </div>
-            <div class="flex-item text-center non-profit">
-                <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
-            </div>
-        </div>
-    </footer>
 </html>
