Fixed HTML Lint errors

--- a/src/pages/about-us/about-us.html
+++ b/src/pages/about-us/about-us.html
@@ -16,7 +16,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbar-Nav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="../contact-us/contact-us.html" >Contact Us</a>
@@ -53,11 +53,11 @@
                 <h2 id="leadership">Leadership</h2>
                 <div  class="flex-container">
                     <div class="flex-item">
-                        <img class="first" src="https://i.ibb.co/yhT00M4/portrait-657116-1920.jpg" alt="A photo of _____" border="0">
+                        <img class="first" src="https://i.ibb.co/yhT00M4/portrait-657116-1920.jpg" alt="A photo of _____">
                         <p>A Picture of ____ the _____ of our organization</p>
                     </div>
                     <div class="flex-item">
-                        <img class="second" src="https://i.ibb.co/CHm3tDN/human-1411499-1920.jpg" alt="A photo of ____" border="0">
+                        <img class="second" src="https://i.ibb.co/CHm3tDN/human-1411499-1920.jpg" alt="A photo of ____">
                         <p>A Picture of ____ the _____ of our organization</p>
                     </div>
                 </div>
@@ -68,40 +68,40 @@
             </section>
 
         </main>
+        <footer  class="footer">
+            <div class="oval"></div>
+            <div class="flex-container">
+                <div class="flex-item text-center">
+                    <h2 href="#">Give</h2>
+                    <a href="../donate/donate.html">Donate<a> | </a></a>
+                    <a href="../our-projects/our-projects.html">Our Projects<a> | </a></a>
+                    <a href="../donate/donate.html#see-impact">See The Impact</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2 href="#">Learn More</h2>
+                    <a href="#mission">Our Mission<a> | </a></a>
+                    <a href="#leadership">LeaderShip<a> | </a></a>
+                    <a href="#finance">Financials</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2>Follow Us</h2>
+                    <a href="#">Instagram<a> | </a></a>
+                    <a href="#">Facebook<a> | </a></a>
+                    <a href="#">Twitter</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2>Contact Us</h2>
+                    <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
+                    <a href="mailto:example@example.com">example@example.com</a>
+                </div>
+                <div class="flex-item text-center non-profit">
+                    <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
+                </div>
+            </div>
+        </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="about-us.js"></script>
     </body>
-    <footer  class="footer" style="background-color: #2c292f">
-        <div class="oval"></div>
-        <div class="flex-container">
-            <div class="flex-item text-center">
-                <h2 href="#">Give</h2>
-                <a href="../donate/donate.html">Donate<a> | </a></a>
-                <a href="../our-projects/our-projects.html">Our Projects<a> | </a></a>
-                <a href="../donate/donate.html#see-impact">See The Impact</a>
-            </div>
-            <div class="flex-item text-center">
-                <h2 href="#">Learn More</h2>
-                <a href="#mission">Our Mission<a> | </a></a>
-                <a href="#leadership">LeaderShip<a> | </a></a>
-                <a href="#finance">Financials</a>
-            </div>
-            <div class="flex-item text-center">
-                <h2>Follow Us</h2>
-                <a href="#">Instagram<a> | </a></a>
-                <a href="#">Facebook<a> | </a></a>
-                <a href="#">Twitter</a>
-            </div>
-            <div class="flex-item text-center">
-                <h2>Contact Us</h2>
-                <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
-                <a href="mailto:example@example.com">example@example.com</a>
-            </div>
-            <div class="flex-item text-center non-profit">
-                <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
-            </div>
-        </div>
-    </footer>
 </html>
 
